syntax = "proto3";
package authGrpc;

option go_package = "../grpc";

message User {
    string UserID = 1;
    string UserName = 2;
}

message NameSearchMessage {
    string APIKEY = 1;
    string name = 2;
}

message LabelSearchMessage {
    string APIKEY = 1;
    repeated string labels = 2;
}

message SearchResult {
    repeated User Users = 1;
}


service authService {
    rpc SearchByName(NameSearchMessage) returns (SearchResult) {}
    rpc SearchByLabel(LabelSearchMessage) returns (SearchResult) {}
}
